# crowdfunding_analyticsV1.0

analytics/: pyproject.toml
analytics/src/analytics/: analytics_crowdfunding.py  generate_csv.py  interface.ui  promotedtotalswidget.py  random_data.csv  user_interface.py
